--- a/etc/Dockerfile
+++ b/etc/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.8.10-buster
 
 RUN set -e \
+ && apt-get update -y && apt-get install -yqq libmysqlclient-dev default-libmysqlclient-dev
  && pip install pipenv
 
 WORKDIR /opt/api
