--- a/etc/Dockerfile
+++ b/etc/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8.10-buster
 
 RUN set -e \
- && apt-get update -y && apt-get install -yqq libmysqlclient-dev default-libmysqlclient-dev
+ && apt-get update -y && apt-get install -yqq default-libmysqlclient-dev \
  && pip install pipenv
 
 WORKDIR /opt/api
@@ -14,6 +14,5 @@ ADD bin ./bin
 ADD etc ./etc
 RUN ./manage.py collectstatic --no-input
 
-VOLUME /opt/api/data
 EXPOSE 8000
 CMD ./bin/startapi.sh
