--- a/etc/api.ini
+++ b/etc/api.ini
@@ -1,13 +1,29 @@
 [uwsgi]
-processes=1
-# create pidfile (before privileges drop)
-pidfile=/tmp/project-master.pid
-# project wsgi app
-module=api.wsgi:application
-master=True
-# clear environment on exit
-vacuum=True
-# respawn processes after serving 5000 requests
-max-requests=5000
-# respawn processes taking more than 20 seconds
-harakiri=20
+module = api.wsgi:application
+strict = true
+master = true
+enable-threads = true
+vacuum = true                       ; Delete sockets during shutdown
+single-interpreter = true
+die-on-term = true                  ; Shutdown when receiving SIGTERM (default is respawn)
+need-app = true
+
+pidfile = /tmp/project-master.pid
+
+single-interpreter = true
+die-on-term = true
+need-app = true
+
+processes = 1                       ; Worker count
+
+max-requests = 1000                 ; Restart workers after this many requests
+max-worker-lifetime = 3600          ; Restart workers after this many seconds
+reload-on-rss = 2048                ; Restart workers after this much resident memory
+worker-reload-mercy = 60            ; How long to wait before forcefully killing worke
+harakiri = 20                       ; Respawn processes taking more than 20 seconds
+auto-procname = true
+
+disable-logging = true              ; Disable built-in logging
+log-master = true
+log-4xx = true                      ; but log 4xx's anyway
+log-5xx = true                      ; and 5xx's
