db based task queue

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ gitpython = "*"
 python-gitlab = "*"
 minio = "*"
 uwsgi = "*"
-mysqlclient = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 pylint = "*"
