parametrize worker count

--- a/etc/api.ini
+++ b/etc/api.ini
@@ -1,6 +1,5 @@
 [uwsgi]
 module = api.wsgi:application
-strict = true
 master = true
 enable-threads = true
 vacuum = true                       ; Delete sockets during shutdown
@@ -14,7 +13,7 @@ single-interpreter = true
 die-on-term = true
 need-app = true
 
-processes = 2                       ; Worker count
+http = 0.0.0.0:8000                 ; Bind address
 
 max-requests = 1000                 ; Restart workers after this many requests
 max-worker-lifetime = 3600          ; Restart workers after this many seconds
