--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,8 @@ profile = "black"
 [tool.black]
 line-length = 120
 target-version = ['py38']
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "api.settings"
+log_level = "DEBUG"
+testpaths = ["test"]
