Rename && Install dev packages in provision

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on: [push, pull_request]
 jobs:
-    Linter:
+    Lint:
       runs-on: ubuntu-latest
       steps:
         - name: Checkout Code
@@ -12,8 +12,8 @@ jobs:
         - name: Run Black
           uses: jpetrucciani/black-check@20.8b1
 
-    PyTest:
-        needs: Linter
+    Test:
+        needs: Lint
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Code
@@ -30,7 +30,7 @@ jobs:
             shell: bash
 
     Publish:
-        needs: PyTest
+        needs: Test
         runs-on: ubuntu-latest
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: true
