Copy Dockerfile to root

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
             with:
               fetch-depth: 0
 
+          - name: Copy Dockerfile
+            run: cp etc/Dockerfile .
+            shell: bash
+
           - name: Login to DockerHub
             uses: docker/login-action@v1
             with:
