Test submit & status views

--- a/etc/.env
+++ b/etc/.env
@@ -11,4 +11,6 @@ DATABASE_HOST=localhost
 DATABASE_PORT=10000
 LOCUST_GITLAB_PRIVATE_TOKEN=aPrivateKey
 LOCUST_GITLAB_PROJECT_ID=1234
+PYTEST_GITLAB_PRIVATE_TOKEN=aPrivateKey
+PYTEST_GITLAB_PROJECT_ID=1234
 UWSGI_PROCESS_COUNT=2
