--- a/etc/compose.yml
+++ b/etc/compose.yml
@@ -15,6 +15,7 @@ services:
       DATABASE_PASSWORD: "${DATABASE_PASSWORD}"
       DATABASE_HOST: "database"
       DATABASE_PORT: "5432"
+      UWSGI_PROCESS_COUNT: "2"
     ports:
       - "8000:8000"
     volumes:
@@ -51,6 +52,7 @@ volumes:
   storage-data:
   db-data:
 
+
 networks:
-    database-network:
-    storage-network:
+  database-network:
+  storage-network:
