--- a/etc/.env.production
+++ b/etc/.env.production
@@ -1,6 +1,6 @@
 SECRET_KEY=django-insecure-7667o_a@x0girb9#wl0dlwx4=((n(xezy*!-3yzs%u%6*lbr4$
 GITLAB_URL=https://gitlab.com
-DEBUG=True
+DEBUG=False
 SUBMISSION_STORAGE_TYPE=MINIO
 MINIO_ADDRESS=127.0.0.1:9000
 MINIO_ACCESS_KEY=1234
