--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
 [scripts]
-deploy-compose = "docker compose -f etc/compose.yml"
-docker-compose-dev = "docker compose -f etc/compose.yml --env-file ./etc/.env.development"
-docker-compose-prod = "docker compose -f etc/compose.yml --env-file ./etc/.env.production"
+docker-compose = "docker compose -f etc/compose.yml -p api"
+docker-compose-dev = "pipenv run docker-compose --env-file ./etc/.env.development"
+docker-compose-prod = "pipenv run docker-compose --env-file ./etc/.env.production"
 
 [[source]]
 url = "https://pypi.org/simple"
