--- a/etc/compose.yml
+++ b/etc/compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       GITLAB_URL: "${GITLAB_URL}"
       SENTRY_SDK_DSN: "${SENTRY_SDK_DSN}"
+      SUBMISSION_STORAGE_TYPE: "${SUBMISSION_STORAGE_TYPE}"
       MINIO_ADDRESS: "storage:9000"
       MINIO_ACCESS_KEY: "${MINIO_ACCESS_KEY}"
       MINIO_SECRET_KEY: "${MINIO_SECRET_KEY}"
@@ -43,7 +44,7 @@ services:
       - database-network
 
   storage:
-    image: minio/minio
+    image: minio/minio:RELEASE.2022-10-24T18-35-07Z
     restart: always
     command: [ "server", "/data" ]
     environment:
